--- a/src/components/ImageGrid.css
+++ b/src/components/ImageGrid.css
@@ -4,6 +4,14 @@
 }
 
 .image-list {
+   margin: 0 20px;
+}
+.image-list img {
    width: 200px;
    height: 200px;
+   transition: transform 0.3s ease;
+}
+
+.image-list:hover img {
+   transform: scale(1.1);
 }
